@startuml

participant Start
participant DepositReader
participant XmlReader
participant DatasetDocumentReader
participant AmdDocumentReader
boundary BagReader
boundary XPathEvaluator

Start -> DepositReader: read deposit
    DepositReader -> DepositReader: validate if files exist\nthrow exception otherwise
        DepositReader -> BagReader: read bag
        DepositReader <-- BagReader: Bag instance

        DepositReader -> XmlReader: read dataset.xml, files.xml,\nagreements.xml, amd.xml
        return Document(s)

        DepositReader -> DatasetDocumentReader: getTitles() and getAudiences()
            note right
                DatasetDocumentReader contains a bunch of
                xpath expression things to get titles etc
                from the dataset.xml file
            end note
            DatasetDocumentReader -> XPathEvaluator: strings(document, "expr")
            return stream of strings
        DepositReader <-- DatasetDocumentReader: stream of strings, mapped to title and audiences in Deposit

        DepositReader -> AmdDocumentReader: getDepositDate() and getPublicationDate()
        note right
            This currently exists in Amd.class,
            but it is not used like any of the
            other classes in that package. Suggest
            to extract it from there as it is only
            used in the DepositMigrationTask
        end note
        DepositReader <-- AmdDocumentReader: A date or a string (TBD)
Start <-- DepositReader: Deposit

@enduml


@startuml

class Deposit
Deposit : Path path
Deposit : Path bagDir
Deposit : String doi
Deposit : List<String> title
Deposit : List<String> audiences
Deposit : Date depositDate
Deposit : Date publicationDate
Deposit : boolean isUpdate
Deposit : ...
Deposit : getVaultMetadata(): VaultMetadata


DepositReader <|--- DepositReaderImpl
DepositReaderImpl *--- DatasetDocumentReader
DepositReaderImpl *--- AmdDocumentReader
DepositReaderImpl *--- BagReader

DatasetDocumentReader *--- XPathEvaluator
AmdDocumentReader *--- XPathEvaluator

interface DepositReader {
    + readDeposit(path): Deposit\n  throws InvalidDepositException
}

class DepositReaderImpl {
    - readBag()
    - readDatasetDocumentProperties()
    - readAmdDocumentProperties()
    + readDeposit(path)
}

class DatasetDocumentReader {
    + getDepositDate(document): Stream<Node>
    + getAudiences(document): Stream<Node>
    + getOtherPropertiesFromDatasetXml(document): Stream<Node>
}

class AmdDocumentReader {
    + getTitles(document): Stream<Node>
    + getAudiences(document): Stream<Node>
    + getOtherPropertiesFromDatasetXml(document): Stream<Node>
}

class XPathEvaluator {
    + nodes(document, expr): Stream<Node>
}
@enduml